--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -27,13 +27,15 @@ jobs:
       commandOptions: -out=$(Build.StagingDirectory)/tfplan -var-file=$(TF_VAR_FILE)
       environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-  - script: |
-      isTerraformRequired=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
-      echo "##vso[task.setvariable variable=isRequired;isOutput=true]${isTerraformRequired}"
-    name: TerraformCondition
-    displayName: Set Terraform Condition
-    env:
-      tfjson: $(TerraformPlan.jsonPlanFilePath)
+  ${{ if ne(parameters.deployType, 'ReactApp') }}:
+  # Allow Terraform Apply to be skipped if there are no changes
+    - script: |
+        isTerraformRequired=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
+        echo "##vso[task.setvariable variable=isRequired;isOutput=true]${isTerraformRequired}"
+      name: TerraformCondition
+      displayName: Set Terraform Condition
+      env:
+        tfjson: $(TerraformPlan.jsonPlanFilePath)
 
   - script: mv $(TerraformPlan.jsonPlanFilePath) $(Build.StagingDirectory)/tfplan.json
     name: StageTFPlanJson
