--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -27,7 +27,7 @@ jobs:
       commandOptions: -out=$(Build.StagingDirectory)/tfplan -var-file=$(TF_VAR_FILE)
       environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-  ${{ if ne(parameters.deployType, 'ReactApp') }}:
+  - ${{ if ne(parameters.deployType, 'ReactApp') }}:
   # Allow Terraform Apply to be skipped if there are no changes
     - script: |
         isTerraformRequired=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
