--- a/ReactApp/build.yml
+++ b/ReactApp/build.yml
@@ -8,6 +8,8 @@ steps:
     artifact: tfoutput-$(ENVIRONMENT_NAME)
     displayName: Get Terraform Outputs
 
+  ## TODO: make TF Outputs consumable by npm build
+
 - task: Cache@2
   displayName: Check Dependency Cache
   inputs:
