--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -30,7 +30,7 @@ jobs:
         isTerraformRequired=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
         echo "##vso[task.setvariable variable=isRequired;isOutput=true]${isTerraformRequired}"
       name: TerraformCondition
-      displayName: Set Terraform Condition
+      displayName: Apply Condition
       env:
         tfjson: $(TerraformPlan.jsonPlanFilePath)
 
