update DeployArtifacts condition

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -108,6 +108,7 @@ stages:
       dependsOn: 
         - BuildSources
         - Terraform
+      condition: and(succeeded('BuildSources'), or(succeeded('Terraform'), eq(variables['HAS_TERRAFORM_APPLY'], false)))
       environment: $(ENVIRONMENT_NAME)
       strategy:
         runOnce:
