standardise variable syntax

--- a/Terraform/environment.yml
+++ b/Terraform/environment.yml
@@ -30,6 +30,6 @@ variables:
   TF_VAR_AWS_REGION: ${{ parameters.AWS_REGION }}
   TF_VAR_AWS_ROLE_ARN: arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/${{ parameters.CICD_ROLE_NAME }}
   TF_VAR_ENVIRONMENT: ${{ parameters.ENVIRONMENT_NAME }}
-  TF_VAR_PROJECT: ${{ variables['System.TeamProject'] }}
-  TF_VAR_UPDATED_BY: ${{ variables['Build.RequestedForEmail'] }}
+  TF_VAR_PROJECT: ${{ variables.System.TeamProject }}
+  TF_VAR_UPDATED_BY: ${{ variables.Build.RequestedForEmail }}
   TF_VAR_FILE: ./tfvars/${{ parameters.ENVIRONMENT_NAME }}.tfvars
