--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -78,7 +78,7 @@ stages:
   dependsOn:
     - Validate
   variables:
-    HAS_TERRAFORM_APPLY: $[ stageDependencies.Validate.Terraform.outputs['TerraformCondition.isRequired'] ]
+    HAS_TERRAFORM_APPLY: $[ stageDependencies.Validate.Terraform.outputs.TerraformCondition.isRequired ]
     ${{ if in(parameters.deployType, 'ReactApp') }}:
       FORCE_TERRAFORM_APPLY: true 
   jobs:
@@ -97,7 +97,7 @@ stages:
   - ${{ if ne(parameters.useTerraform, false) }}:
     - template: Terraform/deploy.yml
       parameters:
-        condition: and(succeeded(), or(eq(variables.FORCE_TERRAFORM_APPLY, true), ne(variables['HAS_TERRAFORM_APPLY'], false)))
+        condition: and(succeeded(), or(eq(variables.FORCE_TERRAFORM_APPLY, true), ne(variables.HAS_TERRAFORM_APPLY, false)))
         deployType: ${{ parameters.deployType }}
         useTerraform: ${{ parameters.useTerraform }}
         ${{ if in(parameters.deployType, 'LambdaService') }}:
@@ -110,7 +110,7 @@ stages:
       dependsOn: 
         - BuildSources
         - Terraform
-      condition: and(succeeded('BuildSources'), or(succeeded('Terraform'), eq(variables['HAS_TERRAFORM_APPLY'], false)))
+      condition: and(succeeded('BuildSources'), or(succeeded('Terraform'), eq(variables.HAS_TERRAFORM_APPLY, false)))
       environment: $(ENVIRONMENT_NAME)
       strategy:
         runOnce:
