--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -131,16 +131,8 @@ stages:
           steps:
           - checkout: none
           - script: |
-              gql='mutation($createversioninput: CreateVersionInput!){
-                createVersion(input: $createversioninput){
-                  id
-                  appName
-                  versionNumber
-                  updatedAt
-                  createdAt 
-                } 
-              }'
-              payload=$(jq -n \
+              gql='mutation($input: CreateVersionInput!){ createVersion(input: $input){ createdAt } }'
+              payload=$(jq -nc \
                 --arg gql "$gql" \
                 --arg id "$id" \
                 --arg ProjectRepoName "$ProjectRepoName" \
@@ -148,13 +140,13 @@ stages:
                 '{
                   query: $gql, 
                   variables: {
-                    createversioninput: {
+                    input: {
                       id: $id,
                       appName: $ProjectRepoName, 
                       versionNumber: $VersionNumber
                     }
                   }
-                }')
+                }') | tr -d ' '
               echo "##vso[task.setvariable variable=output;isOutput=true]${payload}"
             name: Payload
             displayName: Generate Payload
