--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -147,6 +147,7 @@ stages:
                     }
                   }
                 }') | tr -d ' '
+              echo $payload
               echo "##vso[task.setvariable variable=output;isOutput=true]${payload}"
             name: Payload
             displayName: Generate Payload
