test invoke lambda

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -155,4 +155,18 @@ stages:
               ProjectRepoName: 'DevOps/version-app-poc'
               VersionNumber: $(Build.BuildId)   
           - script: echo $(Payload.output)
-            displayName: Print Payload       
+            displayName: Print Payload
+          - task: LambdaInvokeFunction@1
+            name: Mutate
+            inputs:
+              awsCredentials: $(AWS_SERVICE_CONNECTOR)
+              regionName: $(AWS_REGION)
+              functionName: 'testCICDUpdate'
+              payload: |
+                {
+                  "key1": "value1",
+                  "key2": "value2",
+                }       
+              outputVariable: 'updateResult'
+          - script: echo $(Mutate.updateResult)
+            displayName: Print Result
