fix test payload

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -165,7 +165,7 @@ stages:
               payload: |
                 {
                   "key1": "value1",
-                  "key2": "value2",
+                  "key2": "value2"
                 }       
               outputVariable: 'updateResult'
           - script: echo $(Mutate.updateResult)
