--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -157,13 +157,13 @@ stages:
           - script: echo $(Payload.output)
             displayName: Print Payload
           - task: LambdaInvokeFunction@1
-            name: Mutate
+            name: UpdateAPI
             inputs:
               awsCredentials: $(AWS_SERVICE_CONNECTOR)
               regionName: $(AWS_REGION)
               functionName: 'testCICDUpdate'
               payload: $(Payload.output)
               invocationType: 'Event'
-              outputVariable: 'updateResult'
-          - script: echo $(Mutate.updateResult)
+              outputVariable: 'result'
+          - script: echo $(UpdateAPI.result)
             displayName: Print Result
