--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -130,20 +130,31 @@ stages:
         deploy:  
           steps:
           - checkout: none
-          - script: printenv
           - script: |
               gql='mutation($input: CreateVersionInput!){ createVersion(input: $input){ createdAt } }'
               payload=$(jq -nc \
                 --arg gql "$gql" \
-                --arg id "$id" \
-                --arg ProjectRepoName "$ProjectRepoName" \
+                --arg buildId "$BUILD_BUILDID" \
+                --arg buildReason "$BUILD_REASON" \
+                --arg environmentName "$ENVIRONMENT_NAME" \
+                --arg initiatedBy "$BUILD_REQUESTEDFOREMAIL" \
+                --arg isScheduled "$SYSTEM_ISSCHEDULED" \
+                --arg pipelineName "$BUILD_DEFINITIONNAME" \
+                --arg projectName "$SYSTEM_TEAMPROJECT" \
+                --arg sourceBranch "$BUILD_SOURCEBRANCH" \
                 --arg VersionNumber "$VersionNumber" \
                 '{
                   query: $gql, 
                   variables: {
                     input: {
-                      id: $id,
-                      appName: $ProjectRepoName, 
+                      buildId: $buildId
+                      buildReason: $buildReason
+                      environmentName: $environmentName
+                      initiatedBy: $initiatedBy
+                      isScheduled: $isScheduled
+                      pipelineName: $pipelineName
+                      projectName: $projectName
+                      sourceBranch: $sourceBranch
                       versionNumber: $VersionNumber
                     }
                   }
@@ -152,11 +163,7 @@ stages:
             name: Payload
             displayName: Generate Payload
             env:
-              id: $(Build.BuildId)
-              ProjectRepoName: 'DevOps/version-app-poc'
-              VersionNumber: $(Build.BuildId)   
-          - script: echo $(Payload.output)
-            displayName: Print Payload
+              VersionNumber: $(Build.BuildNumber) #TODO: replace with semantic version number
           - task: LambdaInvokeFunction@1
             name: UpdateAPI
             inputs:
