--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -147,14 +147,14 @@ stages:
                   query: $gql, 
                   variables: {
                     input: {
-                      buildId: $buildId
-                      buildReason: $buildReason
-                      environmentName: $environmentName
-                      initiatedBy: $initiatedBy
-                      isScheduled: $isScheduled
-                      pipelineName: $pipelineName
-                      projectName: $projectName
-                      sourceBranch: $sourceBranch
+                      buildId: $buildId,
+                      buildReason: $buildReason,
+                      environmentName: $environmentName,
+                      initiatedBy: $initiatedBy,
+                      isScheduled: $isScheduled,
+                      pipelineName: $pipelineName,
+                      projectName: $projectName,
+                      sourceBranch: $sourceBranch,
                       versionNumber: $VersionNumber
                     }
                   }
