--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -154,7 +154,7 @@ stages:
                       isScheduled: $isScheduled,
                       pipelineName: $pipelineName,
                       projectName: $projectName,
-                      sourceBranch: $sourceBranch
+                      sourceBranch: $sourceBranch,
                       versionNumber: $VersionNumber
                     }
                   }
