--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -14,6 +14,9 @@ jobs:
     parameters:
       useTerraform: ${{ parameters.useTerraform }}
 
+  - script: terraform fmt -check=true
+    displayName: Check Format
+
   - task: TerraformTaskV1@0
     displayName: Plan
     name: TerraformPlan
