--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -16,6 +16,7 @@ jobs:
 
   - script: |
       toFormat=$(terraform fmt -check=true -list=true)
+      echo $toFormat
       if [ ! -z $toFormat ]
       then
         echo "##vso[task.logissue type=error]Format check failed. Check: ${toFormat}."
