--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -98,9 +98,9 @@ stages:
       - template: Terraform/init.yml
         parameters:
           useTerraform: ${{ parameters.useTerraform }}
-      - script: terraform refresh
-        displayName: Refresh State
-        workingDirectory: terraform
+      # - script: terraform refresh
+      #   displayName: Refresh State
+      #   workingDirectory: terraform
       - ${{ each output in parameters.terraformOutputEnv }}:
         - script: terraform output -raw ${{ output.Value }}
           displayName: ${{ output.Key }}
