--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -102,9 +102,10 @@ stages:
       #   displayName: Refresh State
       #   workingDirectory: terraform
       - ${{ each output in parameters.terraformOutputEnv }}:
-        - script: terraform output -raw ${{ output.Value }}
+        - script: echo "##vso[task.setvariable variable=value;isOutput=true]terraform output -raw ${{ output.Value }}"
           displayName: ${{ output.Key }}
           workingDirectory: terraform
+      - script: printenv
     - template: helpers/container-job.yml
       parameters: 
         job: BuildSources
