--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -103,7 +103,7 @@ stages:
       #   workingDirectory: terraform
       - ${{ each output in parameters.terraformOutputEnv }}:
         - script: echo "##vso[task.setvariable variable=value;isOutput=true]terraform output -raw ${{ output.Value }}"
-          displayName: ${{ output.Key }}
+          name: ${{ output.Key }}
           workingDirectory: terraform
         - script: echo $(${{ output.Key }}.value)
     - template: helpers/container-job.yml
