--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -102,7 +102,9 @@ stages:
       #   displayName: Refresh State
       #   workingDirectory: terraform
       - ${{ each output in parameters.terraformOutputEnv }}:
-        - script: echo "##vso[task.setvariable variable=value;isOutput=true]terraform output -raw ${{ output.Value }}"
+        - script: |
+            value=$(terraform output -raw ${{ output.Value }})
+            echo "##vso[task.setvariable variable=value;isOutput=true]${value}"
           name: ${{ output.Key }}
           workingDirectory: terraform
         - script: echo $(${{ output.Key }}.value)
